--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta2 
  	- Added horrible hack to make Artist sorting work in the Album 
		browse page, this is temp until Ampache 3.4
  	- Fixed a problem with the playlist update confirmation page
  	- Fixed css issues with preferences (Thx WarrenG) 
  	- Added dump album art command line script and tweaked catalog
		build display.
  	- Tweaked preferences adding tab'd views rather then all on one
		page, also added account page back in. 
  	- Fixed popen in downsample, forcing binary mode, so that windows
		works correctly (Thx SoundOfEmotion)
  	- Tweaked some defaults in .dist config file as well as the error 
		handler, in order to account for debug_level
  	- Added catalog drop down back to quick random play form
  	- Added bandwidth throttling to downloads, must be enabled in config
		(Thx pb1dft)
  	- Added loose name compare and rename functions to help with sorting
		similar artist names (Thx SpComb)
  	- Fixed a problem with not being able to add Albums to a playlist
		(Thx eudaimon)
  	- Fixed a problem with browsing genres that would incorrectly put
		'Browse' in the Showing Genres Starting With: box
  	- Fixed some unescaped ID's in class constructors. 
  	- Added debug_level config option to allow fine tunning of logging
  	- Fixed catalog functions hopefully increasing speed and removing a bug
		with fast search
  	- Fixed cookie code to account for violation of RFC's by IIS 5 where
		in IIS 5 fails to send cookie header on a header redirect
		(Thx Paul Webb)
  	- Fixed verification of Batch Downloading, if ZLIB isn't detected it
		will not even give you the link
  	- Added remember_length which defines the length that a 'remember me'